// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`.not.toContainValue fails when given object contains array value 1`] = `
"expect(received).not.toContainValue(expected)

Expected object to not contain value:
  [{\\"hello\\": \\"world\\"}]
Received:
  {\\"message\\": [{\\"hello\\": \\"world\\"}]}"
`;

exports[`.not.toContainValue fails when given object contains object value 1`] = `
"expect(received).not.toContainValue(expected)

Expected object to not contain value:
  {\\"hello\\": \\"world\\"}
Received:
  {\\"message\\": {\\"hello\\": \\"world\\"}}"
`;

exports[`.not.toContainValue fails when given object contains primitive value 1`] = `
"expect(received).not.toContainValue(expected)

Expected object to not contain value:
  \\"world\\"
Received:
  {\\"hello\\": \\"world\\"}"
`;

exports[`.toContainValue fails when given object does not contain array value 1`] = `
"expect(received).toContainValue(expected)

Expected object to contain value:
  [{\\"world\\": \\"hello\\"}]
Received:
  {\\"message\\": [{\\"hello\\": \\"world\\"}]}"
`;

exports[`.toContainValue fails when given object does not contain object value 1`] = `
"expect(received).toContainValue(expected)

Expected object to contain value:
  {\\"world\\": \\"hello\\"}
Received:
  {\\"message\\": {\\"hello\\": \\"world\\"}}"
`;

exports[`.toContainValue fails when given object does not contain primitive value 1`] = `
"expect(received).toContainValue(expected)

Expected object to contain value:
  \\"hello\\"
Received:
  {\\"hello\\": \\"world\\"}"
`;
